--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -18,7 +18,7 @@
   margin-top: auto;
   position: relative;
   z-index: 1;
-  padding-top: 12vh; /*Adjust based on your header height */
+  /* padding-top: 12vh; Adjust based on your header height */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,6 +34,7 @@
   opacity: 0;
   transform: translateY(100px);
   transition: opacity 0.5s ease, transform 0.5s ease;
+  /* margin-bottom: 7rem !important; */
 }
 
 /* When the element comes into view, these styles will trigger the 'fade in' and 'move up' effects */
@@ -45,7 +46,7 @@
 /* Add responsive styling as needed */
 @media (max-width: 768px) {
   .home-content > * {
-    width: 75%; /* Wider sections on smaller screens */
+    /* width: 75%; Wider sections on smaller screens */
     margin-top: -3em;
   }
 }
