--- a/src/components/styles/project.css
+++ b/src/components/styles/project.css
@@ -110,7 +110,7 @@ Projects
   }
   .section-center {
     width: 90vw;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     max-width: 1170px;
     display: grid;
     gap: 3rem 2rem;
