--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -29,10 +29,10 @@
   font-size: 16px;
   line-height: 1.6;
   position: relative;
-  overflow: hidden; /* Hide overflow for animation */
-  max-height: 100px; /* Adjust as needed */
-  animation: typing 4s steps(40) 1s forwards,
-    blink-caret 0.75s step-end infinite;
+  overflow: hidden; /* Hide overflow for animation*/
+  max-height: 200px; /* Adjust as needed */
+  animation: typing 2s steps(100) 3s forwards,
+    blink-caret 2.75s step-end infinite;
 }
 
 /* Typing animation */
@@ -88,4 +88,44 @@
   .vision-mission p {
     font-size: 15px;
   }
+}
+
+.history-image-bg {
+  background-color: #2e7d32;
+  transform: translate(2px, -10px);
+}
+.history {
+  transform: translate(-30px, 30px);
+  z-index: 9;
+  /* max-width: 90%; */
+}
+.team-section {
+}
+.img-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+.person-img {
+  width: 100%;
+  display: block;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  position: relative;
+}
+.author {
+  margin-bottom: 0.25rem;
+}
+.job {
+  margin-bottom: 0.5rem;
+  text-transform: uppercase;
+  color: var(--clr-primary-5);
+  font-size: 0.85rem;
+}
+.info {
+  margin-bottom: 0.75rem;
 }
