--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -36,7 +36,7 @@
 .social-icons a {
   margin: 0 0.5rem;
   font-size: 2.5rem;
-  color: #325e4f;
+  /* color: #325e4f;   */
   transition: var(--transition);
 }
 .social-icons a:hover {
@@ -57,7 +57,6 @@
     max-width: 100%;
   }
 }
-
 /* Style adjustments for smaller screens */
 @media (max-width: 480px) {
   .footer-section h3 {
