--- a/src/components/styles/welcome.css
+++ b/src/components/styles/welcome.css
@@ -3771,3 +3771,14 @@ Projects
 .pull-r {
   float: right;
 }
+
+@media screen and (max-width: 1200px) {
+  .blog {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .blog-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
